# my28brains

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conda-lock.yml  conda.yaml  dev-requirements.txt  environment.yaml  environment.yml  install_open3d.sh  old_pyproject.toml  pyproject.toml  pyproject1.toml
28andme/: viz.py
H2_SurfaceMatch/: H2_deformation_transfer.py  H2_ivp.py  H2_match.py  H2_param.py  H2_partial_match.py  H2_stats.py  README.md  SRNF_match.py
H2_SurfaceMatch2/: H2_deformation_transfer.py  H2_ivp.py  H2_match.py  H2_param.py  H2_partial_match.py  H2_stats.py  SRNF_match.py  default_config.py
my28brains/: default_config.py  discrete_surfaces.py  discrete_surfaces_old.py  draft_main_3_wandb.py  extract_energy.py  geodesic_regression.py  hormone_animation.py  io.py  io_mesh.py  main.py  main_1_mesh_brain_data.py  main_1_preprocess.py  main_1_preprocessing.py  main_2_mesh_parameterization_or_geodesic_interpolation.py  main_2_parameterization_interpolation.py  main_2_regress.py  main_2_regression.py  main_3_line_vs_geodesic.py  main_3_param_regr.py  main_3_regression_speedup.py  main_3_sort_meshes_by_hormones.py  main_3_wandb.py  main_4_regression_speedup.py  main_4_sort_meshes_by_hormones.py  main_5_linear_vs_geodesic_distances.py  main_preprocessing.py  meshing.py  my28brains_config.py  parameterized_geodesic_regression.py  parameterized_regression.py  test_linear_regression.py  viz.py
project_menstrual/: default_config.py  main_1_preprocess.py  main_2_linear_regression.py  main_3_dash_app.py
src/: api_key.txt  setcwd.py  (+5 more)
(+27866 files in other folders)
